samples/_failures_safe/1761332056_4bb84e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca361734.c: In function ‘main’:
./samples/SAFE/__tmp_ca361734.c:157:12: error: missing terminating " character
  157 |     printf("Compression
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_ca361734.c:157:5: error: expected expression at end of input
  157 |     printf("Compression
      |     ^~~~~~
./samples/SAFE/__tmp_ca361734.c:157:5: error: expected declaration or statement at end of input
